--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js",
     "test": "NODE_ENV=TEST PORT=3001 jest --verbose --silent --detectOpenHandles",
     "test:watch": "npm test -- --watch",
