--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
+  "version": 2,
+  "builds": [{ "src": "./src/app.js", "use": "@now/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
+
 }
