--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-  "version": 2,
-  "builds": [{ "src": "./src/app.js", "use": "@now/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
-
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
